(Riya) fix KPI card not being left aligned in kendo-dialog

--- a/src/app/DIS/styles/styles.scss
+++ b/src/app/DIS/styles/styles.scss
@@ -29,6 +29,9 @@ section.chart {
 
 .k-dialog-content {
   text-align: center;
+  .Indicator{
+    text-align: left;
+  }
 }
 
 // override here as the styling seems to have problem
